fixing horizontal scroll

--- a/code/src/components/Coaches.css
+++ b/code/src/components/Coaches.css
@@ -6,7 +6,7 @@
 }
 
 .coaches-card{
-  margin-left:50px;
+  margin-left:70px;
 }
 
 @media (min-width:641px){
